2015-06-28  Dan Bernstein  <mitz@apple.com>

        Fixed the iOS build after r186059.

        * UIProcess/ios/WebVideoFullscreenManagerProxy.h:

2015-06-28  Chris Fleizach  <cfleizach@apple.com>

        AX: iOS: Crash at accessibilityObjectForMainFramePlugin()
        https://bugs.webkit.org/show_bug.cgi?id=146399

        Reviewed by Darin Adler.

        Could not reproduce issue, but the invalid address seems to indicate this is a nullptr access is happening when we try to get the plugin of the m_page variable when
        it has not been initialized.

        * WebProcess/WebPage/ios/WebPageIOS.mm:
        (WebKit::WebPage::accessibilityObjectForMainFramePlugin):

2015-06-28  Gyuyoung Kim  <gyuyoung.kim@webkit.org>

        Use Ref/RefPtr instead of PassRefPtr in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=146190

        Reviewed by Darin Adler.

        As a step to remove PassRefPtr, this patch reduces use of PassRefPtr in WebKit2.

        * Shared/API/c/WKContextMenuItem.cpp:
        (WKContextMenuItemCreateAsAction):
        (WKContextMenuItemCreateAsCheckableAction):
        * Shared/CoordinatedGraphics/WebCoordinatedSurface.cpp:
        (WebKit::WebCoordinatedSurface::create):
        * Shared/CoordinatedGraphics/WebCoordinatedSurface.h:
        * Shared/CoordinatedGraphics/threadedcompositor/ThreadSafeCoordinatedSurface.cpp:
        (WebKit::ThreadSafeCoordinatedSurface::create):
        * Shared/CoordinatedGraphics/threadedcompositor/ThreadSafeCoordinatedSurface.h:
        * Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:
        (WebKit::ThreadedCompositor::create):
        * Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.h:
        * Shared/Plugins/NPRemoteObjectMap.cpp:
        (WebKit::NPRemoteObjectMap::create):
        * Shared/Plugins/NPRemoteObjectMap.h:
        * Shared/WebBatteryStatus.h:
        (WebKit::WebBatteryStatus::create):
        * Shared/WebCertificateInfo.h: